--- a/app/src/main/res/layout/activity_panel.xml
+++ b/app/src/main/res/layout/activity_panel.xml
@@ -28,6 +28,22 @@
                 android:layout_marginEnd="24dp"
                 android:text="@string/interactout"
                 android:textSize="20sp"
+                android:textStyle="bold"
+                android:textColor="@color/UM_blue_night"
+                android:visibility="visible"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/taglineText"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="24dp"
+                android:layout_marginTop="85dp"
+                android:layout_marginEnd="24dp"
+                android:text="@string/tagline"
+                android:textSize="16sp"
                 android:visibility="visible"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -35,9 +51,12 @@
 
             <Button
                 android:id="@+id/settingBtn"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="20dp"
+                android:layout_marginBottom="50dp"
                 android:onClick="settingButtonOnClick"
                 android:text="@string/go_to_settings"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -52,6 +71,7 @@
                 android:text="Swipe Interventions"
                 android:textSize="18sp"
                 android:textStyle="bold"
+                android:textColor="@color/Apple_blue"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tapChipGroup" />
@@ -64,6 +84,7 @@
                 android:text="Tap Interventions"
                 android:textSize="18sp"
                 android:textStyle="bold"
+                android:textColor="@color/Apple_blue"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/declaredTimeDisplay" />
@@ -77,7 +98,7 @@
 
             <com.google.android.material.chip.ChipGroup
                 android:id="@+id/swipeChipGroup"
-                android:layout_width="76dp"
+                android:layout_width="106dp"
                 android:layout_height="195dp"
                 android:layout_marginTop="20dp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -116,7 +137,7 @@
 
             <com.google.android.material.chip.ChipGroup
                 android:id="@+id/tapChipGroup"
-                android:layout_width="83dp"
+                android:layout_width="106dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
                 android:orientation="vertical"
@@ -163,9 +184,11 @@
 
             <Button
                 android:id="@+id/startApp"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="50dp"
+                android:layout_marginTop="30dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="20dp"
                 android:text="launch"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -175,9 +198,9 @@
                 android:id="@+id/declaredTimeDisplay"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="48dp"
-                android:layout_marginTop="20dp"
-                android:layout_marginEnd="48dp"
+                android:layout_marginStart="24dp"
+                android:layout_marginTop="40dp"
+                android:layout_marginEnd="24dp"
                 android:text="Configure your interventions below, and choose the apps you want to intervene. Tap each intervention to select or see its descriptions."
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -239,10 +262,10 @@
 
             <TextView
                 android:id="@+id/swipeDelayDescription"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="291dp"
+                android:layout_height="39dp"
                 android:layout_marginStart="1dp"
-                android:layout_marginTop="30dp"
+                android:layout_marginTop="20dp"
                 android:text="you need to wait for every swipe to take effect."
                 android:visibility="invisible"
                 app:layout_constraintStart_toEndOf="@+id/swipeChipGroup"
@@ -253,7 +276,7 @@
                 android:layout_width="291dp"
                 android:layout_height="39dp"
                 android:layout_marginStart="1dp"
-                android:layout_marginTop="24dp"
+                android:layout_marginTop="18dp"
                 android:text="you need wait for every swipe to be replayed slower."
                 android:visibility="invisible"
                 app:layout_constraintStart_toEndOf="@+id/swipeChipGroup"
